--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -43,7 +43,6 @@
   "login_error": "معلومات تسجيل الدخول غير صحيحة.",
   "contact": "التواصل",
   "where": "اذهب إلى الموقع",
-  "hospitals": "المؤسسات",
   "departments": "الأقسام",
   "doctors": "الأطباء",
   "hospital": "معهد",
@@ -114,7 +113,6 @@
   "info": "معلومات",
   "under_construction": "قيد الانشاء",
   "old_password": "كلمة السر الحالية الخاصة بكم",
-  "old_password_error": "لا يمكن أن تبقى كلمة السر الحالية فارغة",
   "new_password": "كلمة سر جديدة",
   "new_password_error": "لا يمكن أن تبقى كلمة السر الحالية فارغة",
   "password_min_error": "يجب أن يكون  4 أحرف على الأقل",
@@ -143,34 +141,35 @@
   "appointment_error": "حدث خطأ في عملية حجز الموعد، حاولوا مرة أخرى لاحقًا.",
   "day": "يوم",
   "month": "قمر",
-  "year": "عام",
-  "register_completed": "Your member registration is complete, your password is your verification code.",
-  "sms_incorrect": "You have entered an incorrect SMS code.",
-  "big_person_infos": "PERSONAL INFORMATION",
-  "contract_complete": "I confirm.",
-  "change_phone": "Change GSM",
-  "update_info": "Update Information",
-  "email_update_error": "The e-mail address you entered is already registered in the system.",
-  "gsm_update_error": "The gsm number you entered is already registered in the system.",
-  "forgot_password_info": "Your password will be sent via SMS.",
-  "repeat_password": "Repeat New Password",
-  "repeat_password_error": "Please re-enter the same password.",
-  "old_password_error": "Your old password is incorrect",
-  "myself": " For myself",
-  "town": "District",
-  "not_agreement": "We do not have an online appointment agreement with this institution. Please try again later.",
-  "my_special_services": "My Special Services",
-  "big_confirm": "APPROVE",
-  "accept_service": "Do you want to take advantage of this service?",
-  "special_service_info": "Your customer representative will call you and complete the necessary procedures.",
-  "special_service_error": "You already have the same service application.",
-  "discount": "Discount",
-  "password_changed": "Your password has been changed successfully.",
-  "phone_changed": "Your gsm number has been successfully changed.",
-  "big_cancel_service": "CANCEL",
-  "clinic": "Clinic",
-  "information_confirm": "هل ترغبون في الإبلاغ عن النتائج الفنية للمواعيد، والتحديثات، والامتيازات الدورية الخاصة، والمعلومات المتعلقة بصحتكم  عن طريق خاصية التواصل الإلكتروني؟",
-  "information_confirm_error": "Accept the SMS sending confirmation.",
-  "hospitals": "Hospitals",
-  "clinics": "Clinics"
+  "year": "عام",  
+  "register_completed": "اكتمل تسجيل عضويتكم ، وكلمة المرور الخاصة بكم هي رمز التحقق الخاص بكم.",
+  "sms_incorrect": "لقد أدخلتم رمز الرسائل القصيرة بشكل خاطئ.",
+  "big_person_infos": "المعلومات الشخصية",
+  "contract_complete": "أوافق",
+  "change_phone": "تغيير رقم الهاتف (GSM)",
+  "update_info": "تحديث المعلومات",
+  "email_update_error": "إن البريد الإلكتروني الذي أدخلته مسجل بالفعل في النظام.",
+  "gsm_update_error": "إن رقم الهاتف (GSM) الذي أدخلته مسجل بالفعل في النظام.",
+  "forgot_password_info": "سيتم إرسال كلمة المرور الخاصة بكم عن طريق الرسائل القصيرة.",
+  "repeat_password": "كلمة المرور الجديدة مرة أخرى",
+  "repeat_password_error": "الرجاء إعادة إدخال نفس كلمة المرور.",
+  "old_password_error": "كلمة مروركم القديمة غير صحيحة",
+  "myself": " من أجلي",
+  "town": "المدينة",
+  "not_agreement": "ليس لدينا اتفاقية موعد عبر الإنترنت مع هذه المؤسسة. الرجاء معاودة المحاولة في وقت لاحق.",
+  "my_special_services": "خدماتي الخاصة",
+  "big_confirm": "موافقة",
+  "accept_service": "هل تريدون الاستفادة من هذه الخدمة؟",
+  "special_service_info": "سيقوم ممثلكم بالاتصال بكم واستكمال الإجراءات اللازمة.",
+  "special_service_error": "لديكم بالفعل نفس تطبيق الخدمة.",
+  "discount": "خصم",
+  "password_changed": "تم تغيير كلمة السر الخاصة بكم  بنجاح.",
+  "phone_changed": "تم تغيير رقم الهاتف (GSM) الخاص بكم بنجاح.",
+  "big_cancel_service": "إلغاء",
+  "clinic": "العيادة",
+  "information_confirm": "أوافق على إرسال الرسائل القصيرة.",
+  "information_confirm_error": "وافقوا على تأكيد إرسال الرسائل القصيرة.",
+  "hospitals": "المستشفيات",
+  "clinics": "العيادات",
+  "share": "Share"
 }
