--- a/i18n/de.json
+++ b/i18n/de.json
@@ -43,7 +43,6 @@
   "login_error": "Anmeldeinformationen sind falsch.",
   "contact": "Kontakt",
   "where": "Zum Standort gehen",
-  "hospitals": "Institutionen",
   "departments": "Abteilungen",
   "doctors": "Ärzte",
   "hospital": "Institute",
@@ -114,7 +113,6 @@
   "info": "NUTZERINFORMATION",
   "under_construction": "Ist im Aufbau",
   "old_password": "Derzeitiges Passwort",
-  "old_password_error": "Ihr aktuelles Passwort darf nicht leer sein",
   "new_password": "Neues Passwort",
   "new_password_error": "Gib dein neues Passwort ein.",
   "password_min_error": "Muss mindestens 4 Zeichen lang sein",
@@ -143,34 +141,35 @@
   "appointment_error": "Bei der Terminvereinbarung ist ein Fehler aufgetreten. Versuchen Sie es später erneut.",
   "day": "Tag",
   "month": "Mond",
-  "year": "Jahr",
-  "register_completed": "Your member registration is complete, your password is your verification code.",
-  "sms_incorrect": "You have entered an incorrect SMS code.",
-  "big_person_infos": "PERSONAL INFORMATION",
-  "contract_complete": "I confirm.",
-  "change_phone": "Change GSM",
-  "update_info": "Update Information",
-  "email_update_error": "The e-mail address you entered is already registered in the system.",
-  "gsm_update_error": "The gsm number you entered is already registered in the system.",
-  "forgot_password_info": "Your password will be sent via SMS.",
-  "repeat_password": "Repeat New Password",
-  "repeat_password_error": "Please re-enter the same password.",
-  "old_password_error": "Your old password is incorrect",
-  "myself": " For myself",
-  "town": "District",
-  "not_agreement": "We do not have an online appointment agreement with this institution. Please try again later.",
-  "my_special_services": "My Special Services",
-  "big_confirm": "APPROVE",
-  "accept_service": "Do you want to take advantage of this service?",
-  "special_service_info": "Your customer representative will call you and complete the necessary procedures.",
-  "special_service_error": "You already have the same service application.",
-  "discount": "Discount",
-  "password_changed": "Your password has been changed successfully.",
-  "phone_changed": "Your gsm number has been successfully changed.",
-  "big_cancel_service": "CANCEL",
-  "clinic": "Clinic",
-  "information_confirm": "I approve sending SMS.",
-  "information_confirm_error": "Accept the SMS sending confirmation.",
-  "hospitals": "Hospitals",
-  "clinics": "Clinics"
+  "year": "Jahr",  
+  "register_completed": "Ihre Mitgliederregistrierung ist abgeschlossen, Ihr Passwort ist Ihr Bestätigungscode.",
+  "sms_incorrect": "Sie haben den falschen SMS-Code eingegeben.",
+  "big_person_infos": "PERSÖNLICHE INFORMATIONEN",
+  "contract_complete": "Ich bin damit einverstanden.",
+  "change_phone": "GSM ändern",
+  "update_info": "Informationen aktualisieren",
+  "email_update_error": "Die von Ihnen eingegebene E-Mail-Adresse ist bereits im System registriert.",
+  "gsm_update_error": "Die eingegebene GSM-Nummer ist bereits im System registriert.",
+  "forgot_password_info": "Ihr Passwort wird per SMS gesendet.",
+  "repeat_password": "Neues Passwort nochmal",
+  "repeat_password_error": "Bitte geben Sie das gleiche Passwort erneut ein.",
+  "old_password_error": "Ihr altes Passwort ist falsch",
+  "myself": " Für mich selbst",
+  "town": "Kreis",
+  "not_agreement": "Wir haben keine Online-Terminvereinbarung mit dieser Institution. Bitte versuchen Sie es später erneut.",
+  "my_special_services": "meine besonderen dienstleistungen",
+  "big_confirm": "GENEHMIGEN ",
+  "accept_service": "Sie möchten diesen Service nutzen?",
+  "special_service_info": "Ihr Kundenvertreter wird Sie anrufen und die erforderlichen Verfahren durchführen.",
+  "special_service_error": "Sie haben bereits dieselbe Dienstanwendung.",
+  "discount": "Rabatt",
+  "password_changed": "Ihr Passwort wurde erfolgreich geändert.",
+  "phone_changed": "Ihre GSM-Nummer wurde erfolgreich geändert.",
+  "big_cancel_service": "STORNIEREN ",
+  "clinic": "Klinik",
+  "information_confirm": "Ich stimme dem Versand von SMS zu.",
+  "information_confirm_error": "Akzeptieren Sie die SMS-Versandbestätigung.",
+  "hospitals": "Krankenhäuser",
+  "clinics": "Kliniken",
+  "share": "Share"
 }
